# octohedra

./: .gitignore  CLAUDE.md  README.md
Misc Models/: bathroom inserts.scad  (+3 more)
Octoflake/analysis/: pyproject.toml  requirements.txt
Octoflake/analysis/corpse/: pixelblaze.py
Octoflake/analysis/printing/: GridBased.py  OctoBuilder.py  OctoConfig.py  OctoGrid.py  PointAligned.py  Stars.py  StlRenderer.py  config.py  derp.stl  execute.py  flange.py  hollow.py  octomodules.scad  stalag experiments.py
Octoflake/analysis/printing/builders/: CuboctahedronBuilder.py  FlakeBuilder.py  HollowFlake.py  HollowOctoBuilder.py  OctoBuilder.py  OctoFlake.py  OctoSectorBuilder.py  OctoStar.py  OctoTowerBuilder.py  OldOctoBuilder.py  StarBuilder.py  TempleComplexBuilder.py  TowerBuilders.py
Octoflake/analysis/printing/gcode/: FileWriter.py  GcodeScratch.py  Gcoder.py  OctoLayers.py  Printer.py  Shape-Box.gcode
Octoflake/analysis/printing/grid/: GridCell.py  GridSet.py  OctoCell.py  OctoGrid.py  OctoVector.py  Renderer.py  TetraCell.py
Octoflake/analysis/printing/octo/: OctoCell.py  OctoConfig.py  OctoConfigs.py  OctoGrid.py  OctoUtil.py  TetraCell.py
Octoflake/analysis/printing/recipies/: FloralSpikes.py  FlowerStar.py  OctoFoam.py  Stars.py  TrimeshExperiments.py  hollow.py  stalag experiments.py
Octoflake/analysis/printing/rendering/: RenderUtils.py  StlRenderer.py
Octoflake/analysis/printing/tests/: test_GridCell.py  test_HCVector.py  test_Move.py  test_mesh_output.py
Octoflake/analysis/printing/tuning/: GemTuning.py  TokenGems.py  TuneLineDimensions.py  TuneOverlap.py
Octoflake/analysis/sandbox/: ExtrusionMath.py  Flanges.py  Forces.py  Geometry.py  NodeMath.py  Obsidian.py  TrainSeats.py  WordGame.py  WordGameTrie.py
backend/: .env.example  main.py  pyproject.toml  render.yaml
backend/3DType/: .gitignore  chop.scad  experiments.py  type.scad
backend/3DType/chop example/: chop.scad
backend/Octoflake/Old OpenSCAD approach/: Makefile
backend/Octoflake/analysis/: .pre-commit-config.yaml
backend/octohedra/: config.py
backend/octohedra/builders/: CuboctahedronBuilder.py  FlakeBuilder.py  OctoBuilder.py  OctoSectorBuilder.py  RecipeBuilder.py  StarBuilder.py  TempleComplexBuilder.py  TowerBuilders.py
backend/octohedra/grid/: GridCell.py  GridSet.py  OctoCell.py  OctoGrid.py  Renderer.py  TetraCell.py
backend/octohedra/tests/: test_GridCell.py  test_HCVector.py  test_mesh_output.py
backend/octohedra/utils/: OctoConfig.py  OctoConfigs.py  OctoUtil.py  RenderUtils.py
backend/routers/: generate.py
backend/services/: octoflake_service.py  octohedra_service.py
(+149 files in other folders)
